package io.slc.jsm.slc_instruction_set;

import io.slc.jsm.slc_interpreter.Instruction;

import io.slc.jsm.slc_runtime.SlcRuntime;

public interface SlcInstruction extends Instruction<SlcRuntime>
{
}
