package io.slc.jsm.slc_runtime;

import io.slc.jsm.slc_interpreter.Runtime;

public class SlcRuntime implements Runtime
{
    public int readRegister(final Register register)
    {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
