@startuml "SLC Instruction Set design"

package slc_interpreter {
    interface InstructionSet<R extends Runtime>
    interface Instruction<R extends Runtime>
}

package slc_runtime {
    class SlcRuntime
}

package slc_instruction_set {
    interface SlcInstruction
    class SlcInstructionSet

    package instructions {
        class Syscall

        Syscall --|> SlcInstruction
    }

    SlcInstruction --|> Instruction
    SlcInstruction *-- SlcRuntime
    SlcInstructionSet --|> InstructionSet
    SlcInstructionSet *-- SlcRuntime
    SlcInstructionSet --> Syscall : creates
}

@enduml
